AG-8094 - Fix topbar mid size layout issues

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/core/_breakpoints.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/core/_breakpoints.scss
@@ -22,7 +22,7 @@ $fw-selector-full-width-large: 1020px;
 $docs-search-medium: 720px;
 $docs-nav-medium: 992px;
 
-$fw-selector-show-selected-medium: 880px;
+$fw-selector-show-selected-medium: 940px;
 
 $about-small: 660px;
 $about-four-column: 880px;
